T2-2115 Use java.net.URI instead of URL where possible
Adds new constructors and getters/setters where appropriate

This should avoid/reduce hangs if a Maven repository or plugin site is
unavailable or has DNS issues.

git-svn-id: http://taverna.googlecode.com/svn@16474 bf327186-88b3-11dd-a302-d386e5130c1c